<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_farms"
            android:icon="@drawable/ic_menu_farm"
            android:title="@string/main_activity_farms" />
        <item
            android:id="@+id/nav_animals"
            android:icon="@drawable/ic_menu_cow"
            android:title="@string/main_activity_animals"/>
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_menu_plan"
            android:title="@string/main_activity_plans"/>
        <item
            android:id="@+id/nav_outs"
            android:icon="@drawable/ic_menu_out"
            android:title="@string/main_activity_out" />
    </group>

    <item android:title="@string/main_activity_configuration">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/app_settings"
                android:title="@string/main_activity_settings"/>
            <item
                android:id="@+id/nav_sign_up"
                android:icon="@drawable/app_shutdown"
                android:title="@string/main_activity_log_out"/>
        </menu>
    </item>

</menu>
